[improve] update apache arrow integrate
Signed-off-by: tomsun28 <tomsun28@outlook.com>