@@ -41,10 +41,6 @@ import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.hertzbeat.collector.dispatch.DispatchConstants;
 import org.apache.hertzbeat.collector.util.CollectUtil;
-import org.apache.hertzbeat.common.constants.MetricDataConstants;
-import org.apache.hertzbeat.common.entity.arrow.reader.ArrowVectorReader;
-import org.apache.hertzbeat.common.entity.arrow.reader.ArrowVectorReaderImpl;
-import org.apache.hertzbeat.common.entity.arrow.RowWrapper;
 import org.apache.hertzbeat.common.entity.job.Configmap;
 import org.apache.hertzbeat.common.entity.job.Job;
 import org.apache.hertzbeat.common.entity.job.Metrics;
@@ -149,32 +145,22 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
         List<CollectRep.MetricsData> metricsDataList = warehouseService.queryMonitorMetricsData(monitorId);
         Metrics tmpMetrics = job.getMetrics().get(0);
         List<Metrics> metricsList = new LinkedList<>();
-
         for (CollectRep.MetricsData metricsData : metricsDataList) {
-            try (ArrowVectorReader reader = new ArrowVectorReaderImpl(metricsData.getData().toByteArray())) {
-                RowWrapper rowWrapper = reader.readRow();
-                while (rowWrapper.hasNextRow()) {
-                    rowWrapper = rowWrapper.nextRow();
-
-                    List<Metrics.Field> fields = rowWrapper.cellStream().map(cell -> Metrics.Field.builder()
-                            .field(cell.getField().getName())
-                            .type(cell.getMetadataAsInteger(MetricDataConstants.TYPE).byteValue())
-                            .label(cell.getMetadataAsBoolean(MetricDataConstants.LABEL))
-                            .unit(cell.getMetadataAsString(MetricDataConstants.UNIT))
+            List<Metrics.Field> fields = metricsData.getFields().stream().map(item ->
+                    Metrics.Field.builder()
+                            .field(item.getName())
+                            .type((byte) item.getType())
+                            .label(item.getLabel())
+                            .unit(item.getUnit())
                             .build())
-                            .toList();
-
-                    Metrics metrics = Metrics.builder()
-                            .visible(true)
-                            .name(metricsData.getMetrics())
-                            .fields(fields)
-                            .prometheus(tmpMetrics.getPrometheus())
-                            .build();
-                    metricsList.add(metrics);
-                }
-            } catch (Exception e) {
-                log.error(e.getMessage(), e);
-            }
+                    .collect(Collectors.toList());
+            Metrics metrics = Metrics.builder()
+                    .visible(true)
+                    .name(metricsData.getMetrics())
+                    .fields(fields)
+                    .prometheus(tmpMetrics.getPrometheus())
+                    .build();
+            metricsList.add(metrics);
         }
         job.setMetrics(metricsList);
         return job;
@@ -325,24 +311,17 @@ public class AppServiceImpl implements AppService, CommandLineRunner {
                     var hierarchyMetric = new Hierarchy();
                     hierarchyMetric.setValue(metricsData.getMetrics());
                     hierarchyMetric.setLabel(metricsData.getMetrics());
-
-                    try (ArrowVectorReader reader = new ArrowVectorReaderImpl(metricsData.getData().toByteArray())) {
-                        List<Hierarchy> hierarchyFieldList = reader.getAllFields().stream()
-                                .map(item -> {
-                                    var hierarchyField = new Hierarchy();
-                                    hierarchyField.setValue(item.getName());
-                                    hierarchyField.setLabel(item.getName());
-                                    hierarchyField.setIsLeaf(true);
-                                    hierarchyField.setType(Integer.valueOf(item.getMetadata().get(MetricDataConstants.TYPE)).byteValue());
-                                    hierarchyField.setUnit(item.getMetadata().get(MetricDataConstants.UNIT));
-                                    return hierarchyField;
-                                })
-                                .collect(Collectors.toList());
-
-                        hierarchyMetric.setChildren(hierarchyFieldList);
-                    } catch (Exception e) {
-                        log.error(e.getMessage(), e);
-                    }
+                    List<Hierarchy> hierarchyFieldList = metricsData.getFields().stream()
+                            .map(item -> {
+                                var hierarchyField = new Hierarchy();
+                                hierarchyField.setValue(item.getName());
+                                hierarchyField.setLabel(item.getName());
+                                hierarchyField.setIsLeaf(true);
+                                hierarchyField.setType((byte) item.getType());
+                                hierarchyField.setUnit(item.getUnit());
+                                return hierarchyField;
+                            }).collect(Collectors.toList());
+                    hierarchyMetric.setChildren(hierarchyFieldList);
                     // combine Hierarchy Metrics
                     combineHierarchyMetrics(hierarchyMetricList, hierarchyMetric);
                 }
